--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   .header{
 min-height: 100vh;
 width: 100%;
-background: #000;
+background: #1C2833;
 color: #fff;
 position: relative;
   }
@@ -29,7 +29,7 @@ position: relative;
    }
    .nav-links{
        text-align: right;
-       background: #f50057;
+       background: #F1C40F;
        padding: 10px 30px;
        border-bottom-left-radius: 18px;
 
@@ -50,7 +50,7 @@ font-size: 18px;
     position: absolute;
     left:0;
     top: 0;
-    background: #f50057;
+    background: #F1C40F;
 }
 .row{
     padding: 0 10%;
@@ -99,6 +99,7 @@ font-size: 18px;
     margin-bottom: 20px;
     border-radius: 6px;
     overflow: hidden;
+    text-decoration: none;
 
 }
 .icon img{
@@ -121,3 +122,36 @@ font-size: 18px;
     opacity: 1;
 }
 
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+    width: 100%; /* Full width */
+    padding: 12px; /* Some padding */ 
+    border: 1px solid #ccc; /* Gray border */
+    border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+  }
+  
+  /* Style the submit button with a specific background color etc */
+  input[type=submit] {
+    background-color: #5B2C6F;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  /* When moving the mouse over the submit button, add a darker green color */
+  input[type=submit]:hover {
+    background-color: #5B2C6F;
+  }
+  
+  /* Add a background color and some padding around the form */
+  .container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+  }
